--- a/sass/components/_computer.scss
+++ b/sass/components/_computer.scss
@@ -2,7 +2,9 @@
   .container {
     width: 1170px;
   }
-
+  .menu-toggle {
+    display: none;
+  }
   .back-img {
     width: 1170px;
     height: 400px;
